# streamlib

./: Cargo.toml  README.md  test.toml
.github/workflows/: nightly.yml  release.yml  test.yml
src/: cli.rs  git.rs  library.rs  main.rs  parser.rs  player.rs  smil.rs  utils.rs
