[package]
name = "streamlib"
description = "Play your favorite live streams from command line"
version = "0.6.5"
authors = ["Yuval Adam <_@yuv.al>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
clap = "2.33.0"
directories = "2.0.2"
duct = "0.13.0"
git2 = "0.10.1"
glob = "0.3.0"
regex = "1.3.1"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
toml = "0.5.4"
quick-xml = "0.16.1"

[target.'cfg(target_family = "unix")'.dependencies]
termion = "1.5.3"
